# university

Универ/: БД
Универ/3.1/Курсач_Спп/: f19b7fb12241ed82.doc  курсовая4.docx
Универ/My 3 Course/: ~$$Лр2 шаг 1-3.~vsdx
Универ/My 3 Course/БД/: 250541_L1_Власов_Р.Е.docx  250541_L2_Власов_Р.Е.docx  250541_L3_Власов_Р.Е.docx  Doc11111 (1).docx  er.drawio
Универ/My 3 Course/БД/1 SEM/: er.docx  urm.docx  БД.250541.Власов (КР1).docx  Лр1.vsdx  (+8 more)
Универ/My 3 Course/БелЯз/: КР.docx
Универ/My 3 Course/ИнфБез/: ОИнфБ.250541.Власов Р.Е Реферат.docx  ОИнфБ.250541.Тарасенко (Реферат).docx
Универ/My 3 Course/КИДСВТ/: Thumbs.db
Универ/MyMaterialsFromAllCourses/: Thumbs.db
Универ/MyMaterialsFromAllCourses/Архив материалов/: Английский КР.docx  КР_СОЦИОЛОГИЯ_ВЛАСОВ.docx
Универ/MyMaterialsFromAllCourses/БД/: БД.КР1.Власов.docx  БД.КР2.Власов.docx  Лр2.vsdx
Универ/MyMaterialsFromAllCourses/ОКС/: Cisco Packet Tracer Instructor.lnk  Власов_ОКС_Лабараторная_работа_1.pkt  Власов_ОКС_Лабараторная_работа_2(2v).pkt  Власов_ОКС_Лабараторная_работа_2(3v).pkt  Власов_ОКС_Лабараторная_работа_2.pkt  Власов_ОКС_Лабараторная_работа_3.pkt  Власов_ОКС_Лабараторная_работа_4.pkt  Расчет подсетей.docx
Универ/MyMaterialsFromAllCourses/С, ASM, C++/С++/KP/: Algorithms.h  CMakeLists.txt  FileProcessor.h  Functions.h  InterfaceWithFile.h  InterfaceWithList.cpp  InterfaceWithList.h  InterfaceWithTemplateList.cpp  InterfaceWithTemplateList.h  ListWithIterator.cpp  ListWithIterator.h  Node.h  PassengerTransport.cpp  PassengerTransport.h  Student.h  TemplateList.cpp  TemplateList.h  main.cpp
(+602 files in other folders)
